Grease Pencil GPF error if stroke thickness change too much between stroke points #49614

Closed
opened 2016-10-09 19:12:19 +02:00 by Antonio Vazquez · 10 comments

Windows 10 64 bits
Blender 2.80 Branch Hash: e636529
GTX 660

If a stroke is set as volumetric and the size of the point change in size, a GPF error appears after uncheck Volumetric. Really, the error is not related to volumetric but how the stroke is drawn if the thickness change too much.

I have run some debug and the error appears here in drawgpencil.c:

if (fabsf(pt->pressure - curpressure) > 0.2f / (float)thickness) {
     immEnd();

It looks the immEnd() is not available in the midle of the operation. I'm not an OpenGl expert and I have no idea how to fix it, so I need help. Maybe, we can avoid this "mid" immEnd call.

One way to reproduce:

  1. Open file Test_Volumetric_280.blend
  2. Uncheck Volumetric Strokes in palette color panel.
Windows 10 64 bits Blender 2.80 Branch Hash: e636529 GTX 660 If a stroke is set as volumetric and the size of the point change in size, a GPF error appears after uncheck Volumetric. Really, the error is not related to volumetric but how the stroke is drawn if the thickness change too much. I have run some debug and the error appears here in drawgpencil.c: ``` if (fabsf(pt->pressure - curpressure) > 0.2f / (float)thickness) { immEnd(); ``` It looks the immEnd() is not available in the midle of the operation. I'm not an OpenGl expert and I have no idea how to fix it, so I need help. Maybe, we can avoid this "mid" immEnd call. One way to reproduce: 1) Open file [Test_Volumetric_280.blend](https://archive.blender.org/developer/F376041/Test_Volumetric_280.blend) 2) Uncheck Volumetric Strokes in palette color panel.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Member

Added subscriber: @MikeErwin

Added subscriber: @MikeErwin
Member

With your file I hit the same problem on Mac.
Debugging now...

With your file I hit the same problem on Mac. Debugging now...
Author
Member

@MikeErwin I have seen the problem is there is only one point, but the type is GL_LINE_STRIP

assert(imm.vertex_idx == 0 || vertex_count_makes_sense_for_primitive(imm.vertex_idx, imm.primitive));

The second part of the assert is True

@MikeErwin I have seen the problem is there is only one point, but the type is GL_LINE_STRIP ``` assert(imm.vertex_idx == 0 || vertex_count_makes_sense_for_primitive(imm.vertex_idx, imm.primitive)); ``` The second part of the assert is True
Mike Erwin self-assigned this 2016-10-09 21:34:44 +02:00
Member

We talked more about this on IRC. I will adjust the gpencil drawing logic to fix this.

We talked more about this on IRC. I will adjust the gpencil drawing logic to fix this.
Author
Member

@MikeErwin I have been fixing the bug and there were more problems for cyclic strokes and colors. I have fixed with this code in my PC and I would like you confirm is ok before apply the commit. I have to do the same with buffer_stroke draw.

I know this will change in the future and it's a temporary solution, but at least we can test other Grease Pencil areas without a GPF.

BugFix.png

PS: I load here an image of the change because I don't know how attach a diff file to the task.

@MikeErwin I have been fixing the bug and there were more problems for cyclic strokes and colors. I have fixed with this code in my PC and I would like you confirm is ok before apply the commit. I have to do the same with buffer_stroke draw. I know this will change in the future and it's a temporary solution, but at least we can test other Grease Pencil areas without a GPF. ![BugFix.png](https://archive.blender.org/developer/F378276/BugFix.png) PS: I load here an image of the change because I don't know how attach a diff file to the task.
Member

Looks good to me!

Looks good to me!
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member
Fixed with this commit: https://developer.blender.org/rB6855ba4034158b916122b1d881b3f53c5d1b3eb6
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49614
No description provided.