Fix T49614: Grease Pencil GPF error if stroke thickness change too much between stroke points

The problem was the function tried to draw a line with one point only. This fix will be replaced by new geometry shaders, but we need while this change is not ready.